# Microservices

./: package-lock.json  package.json  pyproject.toml
calculations/: main.py  prepLambda.ps1  pyproject.toml  requirements.txt  test_lambda_function.py  test_lambda_handler_with_excel.py  tests.py  unit_tests_for_riego_ivia.xlsx
calculations/calculations/: lambda_function.py
calculations/deployment_package/: helpers.py  lambda_function.py
calculations/deployment_package/charset_normalizer-3.3.2.dist-info/: RECORD
calculations/deployment_package/numpy-1.26.4.dist-info/: RECORD
calculations/irrigation_handler/: CultivaKcMes.xlsx  create_deployment_package.py  lambda_function.py  requirements.txt  test_lambda_function.py  test_lambda_handler_with_excel.py
calculations/myenv/: pyvenv.cfg
calculations/myenv/Scripts/: activate  activate.bat
calculations/python/pip-23.2.1.dist-info/: RECORD
calculations/test-resources/: unit_tests_for_riego_ivia.csv
twilio/: pyproject.toml
twilio/messager/: lambda_function.py
ui/: .firebaserc  package-lock.json  package.json  svelte.config.js  tailwind.config.js
ui/.firebase/: hosting.cHVibGlj.cache
ui/src/: app.html  aws-exports.js  firebase-config.ts  store.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/data-entry/: +page.server.js  +page.svelte  FieldsMap.svelte  Map.svelte  SaveFields.svelte
ui/src/routes/fields/: +page.svelte
ui/src/routes/login/: +page.svelte
ui/src/routes/profile/: +page.svelte
ui/src/routes/register/: +page.svelte
ui/src/types/: field.ts  index.ts
(+1 files in other folders)
