[tool.poetry]
name = "calculations"
version = "0.1.0"
description = ""
authors = ["Artur Chabowski <a.j.chabowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"
requests = "^2.32.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
